--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
         </div>
         <div id="menu">
-            <img src="Imagens/menuicon.png" width="28px">
+            <img src="menuicon.png" width="28px">
         </div>
         <div id="menuescondido">
             <nav>
