--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -37,12 +37,14 @@
     </header>
 
     <main>
-        <h1>O que é o Windows 10?</h1>
-        <p>O Windows 10 é uma das versões do sistema operacional feito pela Microsoft. Este é responsável pela interface do computador.</p>
-        <p>Essa versão veio após o Windows 8 (que foi considerado um fracasso). Com essa versão, a Microsoft trouxe novas funcionalidades e agradou grande parte do público.</p>
-        <p>Abaixo temos uma imagem da Desktop do Windows 10:</p>
-        <img src="https://img.ibxk.com.br/2016/04/30/30175731894024.png?ims=704x" width="50%" height="50%"><br><br>
-        <a href="funcionalidades.html"><button>Próximo</button></a>
+        <h1>Algumas das novas funcionalidades</h1>
+        <h2>Cortana</h2>
+        <p>Nova assistente virtual controlada por comandos de voz.</p>
+        <h2>Xbox</h2>
+        <p>Houve várias integrações com a Xbox, permitiu o controlo de amizades, o envio de mensagens e até ver a loja online de jogos.</p>
+        <h2>Windows Hello</h2>
+        <p>Permite realizar o login de formas mais fáceis, como por exemplo através da impressão digital e facial.</p>
+        <a href="vantagens.html"><button>Próximo</button></a>
     </main>
 </body>
 </html>
