--- a/vantagens.html
+++ b/vantagens.html
@@ -37,12 +37,16 @@
     </header>
 
     <main>
-        <h1>O que é o Windows 10?</h1>
-        <p>O Windows 10 é uma das versões do sistema operacional feito pela Microsoft. Este é responsável pela interface do computador.</p>
-        <p>Essa versão veio após o Windows 8 (que foi considerado um fracasso). Com essa versão, a Microsoft trouxe novas funcionalidades e agradou grande parte do público.</p>
-        <p>Abaixo temos uma imagem da Desktop do Windows 10:</p>
-        <img src="https://img.ibxk.com.br/2016/04/30/30175731894024.png?ims=704x" width="50%" height="50%"><br><br>
-        <a href="funcionalidades.html"><button>Próximo</button></a>
+        <h1>Vantagens do Windows 10</h1>
+        <h2>Apesar do Windows 10 ter muitas funções esquecidas que só ocupam espaço, o Windows 10 também tem algumas vantagens:</h2>
+        <ul>
+            <li>Menu Iniciar adaptado para ratos e para monitores táteis ao mesmo tempo.</li>
+            <li>Mais opções de personalização.</li>
+            <li>Maior proteção contra ameaças.</li>
+            <li>Suporte a 4k.</li>
+            <li>A maioria das aplicações atualmente são feitas para funcionar neste Windows.</li>
+            <li>Requisítos mínimos relativamente baixos.</li>
+        </ul>
     </main>
 </body>
 </html>
