--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <nav>
                 <a href="index.html">Início</a>
                 <a href="oque.html">O que é?</a>
-                <a href="sobre.html">Downloads</a>
-                <a href="sobre.html">Sobre</a>
+                <a href="funcionalidades.html">Funcionalidades</a>
+                <a href="vantagens.html">Vantagens</a>
             </nav>
         </div>
         <div id="menu">
@@ -30,8 +30,8 @@
             <nav>
                 <a href="index.html">Início</a> <br>
                 <a href="oque.html">O que é?</a><br>
-                <a href="sobre.html">Downloads</a> <br>
-                <a href="sobre.html">Sobre</a>
+                <a href="funcionalidades.html">Funcionalidades</a> <br>
+                <a href="vantagens.html">Vantagens</a>
             </nav>
         </div>
     </header>
