--- a/vantagens.html
+++ b/vantagens.html
@@ -47,6 +47,9 @@
             <li>A maioria das aplicações atualmente são feitas para funcionar neste Windows.</li>
             <li>Requisítos mínimos relativamente baixos.</li>
         </ul>
+        <a href="index.html"><button>Voltar ao início</button></a>
     </main>
 </body>
 </html>
+
+<script src="main.js"></script>
