--- a/oque.html
+++ b/oque.html
@@ -42,6 +42,21 @@
         <p>Essa versão veio após o Windows 8 (que foi considerado um fracasso). Com essa versão, a Microsoft trouxe novas funcionalidades e agradou grande parte do público.</p>
         <p>Abaixo temos uma imagem da Desktop do Windows 10:</p>
         <img src="https://img.ibxk.com.br/2016/04/30/30175731894024.png?ims=704x" width="50%" height="50%"><br><br>
+        <p>Estão disponíveis duas versões do Windows 10:</p>
+        <ul>
+            <li>
+                Windows 10 Home
+            </li>
+            <li>
+                Windows 10 Pro
+            </li>
+        </ul>
+        <p>Também há outras versões, mas estas não estão disponíveis diretamente ao público. Como por exemplo:</p>
+        <ul>
+            <li>Windows 10 Mobile</li>
+            <li>Windows 10 Enterprise</li>
+            <li>Windows 10 Education</li>
+        </ul>
         <a href="funcionalidades.html"><button>Próximo</button></a>
     </main>
 </body>
